moved Services background image div logic to Header to deal with resizing issue on mobile due to viewport height change when showing/not showing search bar

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -21,6 +21,22 @@
 		width: 100%;
 	}
 
+	&__servicesBG {
+		@include mx.servicesBg;
+
+		&--day {
+			background: url("../../assets/images/day-bottom.webp");
+		}
+
+		&--night {
+			background-image: url("../../assets/images/night-bottom.webp");
+		}
+
+		&.show {
+			z-index: 3;
+		}
+	}
+
 	&__dayImg {
 		background: url("../../assets/images/bg-day-top.webp") center top;
 		background-repeat: no-repeat;
