--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -605,8 +605,9 @@
 }
 
 @mixin servicesBg {
-	background-attachment: fixed;
 	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
 	height: 100%;
 	position: absolute;
 	width: 100%;
